# backend/routes/unauthorizedRoutes.go
@@ -11,8 +11,8 @@ import (
 func authRoutes(v1 *gin.RouterGroup, db gorm.DB) {
 	userService := services.NewUserService(repositories.NewDB(&db))
 	authHandlers := handlers.NewAuthenticationHandlers(*userService)
-	v1.POST("/login", authHandlers.Login)
 	v1.POST("/signup", authHandlers.SignUp)
+	v1.POST("/login", authHandlers.Login)
 	v1.POST("/forget-password", authHandlers.ForgetPassword)
 	v1.POST("/reset-password", authHandlers.ResetPassword)
 	v1.POST("/change-password", authHandlers.ChangePassword)
